--- a/CONFIG
+++ b/CONFIG
@@ -6,7 +6,7 @@
 #
 #
 #
-HOMEBREW_PACKAGES="htop-osx wget mas rbenv ruby-build starship yadm gpg"
+HOMEBREW_PACKAGES="htop-osx wget mas rbenv ruby-build starship yadm gpg svn"
 HOMEBREW_QUICKLOOK="qlcolorcode qlmarkdown qlprettypatch qlstephen qlimagesize quicklook-csv quicklook-json epubquicklook"
 HOMEBREW_CASKS="google-chrome karabiner-elements the-unarchiver 1password spotify iterm2 slack nextcloud hammerspoon"
 
